// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nx/vite/plugin Library mode should exclude serve and preview targets when vite.config.ts is in library mode 1`] = `
[
  [
    "my-lib/vite.config.ts",
    {
      "projects": {
        "my-lib": {
          "metadata": {},
          "projectType": "library",
          "root": "my-lib",
          "targets": {
            "build": {
              "cache": true,
              "command": "vite build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "vite",
                  ],
                },
              ],
              "metadata": {
                "description": "Run Vite build",
                "help": {
                  "command": "npx vite build --help",
                  "example": {
                    "options": {
                      "manifest": "manifest.json",
                      "sourcemap": true,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": "my-lib",
              },
              "outputs": [
                "{workspaceRoot}/dist/{projectRoot}",
              ],
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/vite/plugin not root project should create nodes 1`] = `
[
  [
    "my-app/vite.config.ts",
    {
      "projects": {
        "my-app": {
          "metadata": {},
          "projectType": "application",
          "root": "my-app",
          "targets": {
            "build-something": {
              "cache": true,
              "command": "vite build",
              "dependsOn": [
                "^build-something",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "vite",
                  ],
                },
              ],
              "metadata": {
                "description": "Run Vite build",
                "help": {
                  "command": "npx vite build --help",
                  "example": {
                    "options": {
                      "manifest": "manifest.json",
                      "sourcemap": true,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": "my-app",
              },
              "outputs": [
                "{workspaceRoot}/dist/{projectRoot}",
              ],
            },
            "my-serve": {
              "command": "vite serve",
              "metadata": {
                "description": "Starts Vite dev server",
                "help": {
                  "command": "npx vite --help",
                  "example": {
                    "options": {
                      "port": 3000,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": "my-app",
              },
            },
            "preview-site": {
              "command": "vite preview",
              "metadata": {
                "description": "Locally preview Vite production build",
                "help": {
                  "command": "npx vite preview --help",
                  "example": {
                    "options": {
                      "port": 3000,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": "my-app",
              },
            },
            "serve-static": {
              "executor": "@nx/web:file-server",
              "options": {
                "buildTarget": "build-something",
                "spa": true,
              },
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/vite/plugin root project should create nodes 1`] = `
[
  [
    "vite.config.ts",
    {
      "projects": {
        ".": {
          "metadata": {},
          "projectType": "application",
          "root": ".",
          "targets": {
            "build": {
              "cache": true,
              "command": "vite build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "vite",
                  ],
                },
              ],
              "metadata": {
                "description": "Run Vite build",
                "help": {
                  "command": "npx vite build --help",
                  "example": {
                    "options": {
                      "manifest": "manifest.json",
                      "sourcemap": true,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/dist",
              ],
            },
            "preview": {
              "command": "vite preview",
              "metadata": {
                "description": "Locally preview Vite production build",
                "help": {
                  "command": "npx vite preview --help",
                  "example": {
                    "options": {
                      "port": 3000,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": ".",
              },
            },
            "serve": {
              "command": "vite serve",
              "metadata": {
                "description": "Starts Vite dev server",
                "help": {
                  "command": "npx vite --help",
                  "example": {
                    "options": {
                      "port": 3000,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": ".",
              },
            },
            "serve-static": {
              "executor": "@nx/web:file-server",
              "options": {
                "buildTarget": "build",
                "spa": true,
              },
            },
          },
        },
      },
    },
  ],
]
`;
